スピーカー情報を更新した

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <div class="box__wrap">
         <div class="speaker__icon"></div>
         <div class="speaker__profile">
-          <h3>未定</h3>
-          <p>スピーカーの詳細が入ります。スピーカーの詳細が入ります。スピーカーの詳細が入ります。スピーカーの詳細が入ります。スピーカーの詳細が入ります。スピーカーの詳細が入ります。スピーカーの詳細が入ります。スピーカーの詳細が入ります。スピーカーの詳細が入ります。</p>
+          <h3>Yoshio</h3>
+          <p>東京を中心に仕事している、普通のプログラマーです。<br>関東Javascriptエンジニア会の人。<br>主に業務用Webアプリの開発をしています。</p>
         </div>
       </div>
       <div class="box__wrap">
