--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <h2>イベント日時・場所</h2>
       <p>日時：9月9日（火）15:00<br>場所：本社10F会議室</p>
       <div class="map__wrap"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d556.6181954128797!2d139.70601410910538!3d35.67768727431244!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d000e89b76d%3A0x4fbb41d20b704a09!2zQXRsYXMyMeODk-ODqw!5e0!3m2!1sja!2sjp!4v1757381343697!5m2!1sja!2sjp" width="1524" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+      <figure><img src="img/index_im01.jpg" alt=""></figure>
     </div>
     <div class="inner">
       <h2>スピーカー</h2>
@@ -60,7 +61,7 @@
           </tr>
           <tr>
             <td>15:05〜15:50</td>
-            <td>セッション未定</td>
+            <td>わたしのGitの使い方</td>
           </tr>
           <tr>
             <td>15:50〜16:00</td>
@@ -68,7 +69,7 @@
           </tr>
           <tr>
             <td>16:00〜16:45</td>
-            <td>セッション未定</td>
+            <td>現場で使える！実践Git</td>
           </tr>
           <tr>
             <td>16:45〜17:00</td>
